--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,15 @@ main:
   - name: Experience
     url: '#experience'
     weight: 40
+  - name: Awards
+    url: '#awards'
+    weight: 50
+  - name: Conferences
+    url: '#volunteering'
+    weight: 60
   - name: Contact
     url: '#contact'
-    weight: 50
+    weight: 200
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
